// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  <span
    aria-label="so cool"
    role="img"
  >
    😀 😎 👍 💯
  </span>
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "border": "1px solid #eee",
      "borderRadius": 3,
      "cursor": "pointer",
      "fontSize": 15,
      "margin": 10,
      "padding": "3px 10px",
    }
  }
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots InboxScreen default 1`] = `
<div
  className="page lists-show"
>
  <nav>
    <h1
      className="title-page"
    >
      <span
        className="title-wrapper"
      >
        Taskbox
      </span>
    </h1>
  </nav>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "border": "1px solid #eee",
        "borderRadius": 3,
        "cursor": "pointer",
        "fontSize": 15,
        "margin": 10,
        "padding": "3px 10px",
      }
    }
    type="button"
  >
    <span
      aria-label="so cool"
      role="img"
    >
      😀 😎 👍 💯
    </span>
  </button>
</div>
`;

exports[`Storyshots InboxScreen error 1`] = `
<div
  className="page lists-show"
>
  <div
    className="wrapper-message"
  >
    <span
      className="icon-face-sad"
    />
    <div
      className="title-message"
    >
      Oh no!
    </div>
    <div
      className="subtitle-message"
    >
      Something went wrong
    </div>
  </div>
</div>
`;

exports[`Storyshots Task archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      href="#/"
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task long title 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="This task's name is absurdly large. In fact, I think if I keep going I might end up with content overflow. What will happen? The star that represents a pinned task could have text overlapping. The text could cut-off abruptly when it reaches the star. I hope not"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      href="#/"
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      className="checkbox-custom"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      placeholder="Input title"
      readOnly={true}
      style={
        Object {
          "textOverflow": "ellipsis",
        }
      }
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a
      href="#/"
      onClick={[Function]}
    >
      <span
        className="icon-star"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="wrapper-message"
    >
      <span
        className="icon-check"
      />
      <div
        className="title-message"
      >
        You have no tasks
      </div>
      <div
        className="subtitle-message"
      >
        Sit back and relax
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
    <div
      className="loading-item"
    >
      <span
        className="glow-checkbox"
      />
      <span
        className="glow-text"
      >
        <span>
          Loading
        </span>
         
        <span>
          cool
        </span>
         
        <span>
          state
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList withPinnedTasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          className="checkbox-custom"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          placeholder="Input title"
          readOnly={true}
          style={
            Object {
              "textOverflow": "ellipsis",
            }
          }
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a
          href="#/"
          onClick={[Function]}
        >
          <span
            className="icon-star"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<article
  style={
    Object {
      "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
      "lineHeight": 1.4,
      "margin": 15,
      "maxWidth": 600,
    }
  }
>
  <h1>
    Welcome to storybook
  </h1>
  <p>
    This is a UI component dev environment for your app.
  </p>
  <p>
    We've added some basic stories inside the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories
    </code>
     directory.
    <br />
    A story is a single state of one or more UI components. You can have as many stories as you want.
    <br />
    (Basically a story is like a visual test case.)
  </p>
  <p>
    See these sample 
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderBottom": "1px solid #1474f3",
          "borderLeft": "none",
          "borderRight": "none",
          "borderTop": "none",
          "color": "#1474f3",
          "cursor": "pointer",
          "font": "inherit",
          "padding": 0,
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      type="button"
    >
      stories
    </button>
     for a component called
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
    .
  </p>
  <p>
    Just like that, you can add your own components as stories.
    <br />
    You can also edit those components and see changes right away.
    <br />
    (Try editing the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      Button
    </code>
     stories located at
     
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      src/stories/index.js
    </code>
    .)
  </p>
  <p>
    Usually we create stories with smaller UI components in the app.
    <br />
    Have a look at the
     
    <a
      href="https://storybook.js.org/basics/writing-stories"
      rel="noopener noreferrer"
      style={
        Object {
          "borderBottom": "1px solid #1474f3",
          "color": "#1474f3",
          "paddingBottom": 2,
          "textDecoration": "none",
        }
      }
      target="_blank"
    >
      Writing Stories
    </a>
     
    section in our documentation.
  </p>
  <p
    style={
      Object {
        "opacity": 0.5,
      }
    }
  >
    <b>
      NOTE:
    </b>
    <br />
    Have a look at the 
    <code
      style={
        Object {
          "backgroundColor": "#f3f2f2",
          "border": "1px solid #eae9e9",
          "borderRadius": 4,
          "color": "#3a3a3a",
          "fontSize": 15,
          "fontWeight": 600,
          "padding": "2px 5px",
        }
      }
    >
      .storybook/webpack.config.js
    </code>
     to add webpack loaders and plugins you are using in this project.
  </p>
</article>
`;
